tests/generics/async_nested.diag
async_nested.ax:1:1: error: await requires Future[T], found 22
async_nested.ax:1:1: error: return type mismatch: expected 3, found 0
async_nested.ax:1:1: error: await requires Future[T], found 23
async_nested.ax:1:1: error: await requires Future[T], found 22
async_nested.ax:1:1: error: await requires Future[T], found 23
